gccida/g0/schedule_block
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/schedule_block/src/haifa-sched.c:2133:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
tail = ( rtx)next_tail[1]; 
             ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/schedule_block/src/haifa-sched.c:2248:28: error: use of undeclared identifier 'byte_779C53'
print_block_visualization( byte_779C53); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/schedule_block/src/haifa-sched.c:2256:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
for ( note_head = note_list; note_head[1]; note_head = ( rtx)note_head[1] ) 
^                            ~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/schedule_block/src/haifa-sched.c:2256:62: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note_head = note_list; note_head[1]; note_head = ( rtx)note_head[1] ) 
                                                             ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/schedule_block/src/haifa-sched.c:2258:27: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)&note_head[1] = head[1]; 
                          ^ ~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/schedule_block/src/obj/haifa-sched.o] Error 1
